--- a/src/app/modificar-enfrentamientos/modificar-enfrentamientos.page.html
+++ b/src/app/modificar-enfrentamientos/modificar-enfrentamientos.page.html
@@ -53,7 +53,7 @@
     <ion-grid>
         <ion-row>
             <ion-col [size]="12">
-                <ion-list class="card-enfrentamiento" *ngFor="let enfrent of partidosAVisualizar | filter:competenciaSeleccionada">
+                <ion-list class="card-enfrentamiento" *ngFor="let enfrent of partidosAVisualizar">
                         <ion-row >
                             <ion-col [size]="12">
                                 <ion-row>
@@ -75,7 +75,7 @@
                                     <ion-col [size]="4" *ngIf="enfrent.golLocal!=null || enfrent.golVisit!=null && (enfrent.short.includes('Finished'));else other_content">
                                         <ion-row style="margin-top:1.5rem">
                                             <ion-col class="ion-no-margin ion-no-padding display-flex" [size]="12">
-                                                <p class="text-resultado margin-auto"> Resultado final</p>
+                                                <p class="text-resultado margin-auto"> Resultado final </p>
                                             </ion-col>
                                         </ion-row>
                                         <ion-row class="display-flex">
