--- a/src/app/puntajes-grupos/puntajes-grupos.page.css
+++ b/src/app/puntajes-grupos/puntajes-grupos.page.css
@@ -1,12 +1,13 @@
 .select{
     --background: var(--ion-color-primary);
     --color:white;
-    
+    padding: 1.3rem 1rem 1.3rem 1rem;
 }
 
 .unselect{
-    --background: white;
+    --background: #CCCCCC;
     --color:var(--ion-color-primary);
+    margin: 0.4rem 1rem 0rem 1rem;
 }
 
 .ion-select{
